--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Peershots Creative — Designs & Ad Creatives</title>
+  <title>Moda — Designs & Ad Creatives</title>
   <meta name="description" content="Custom apparel designs, ad creatives, and mockups. Fast turnarounds. IG-ready packages." />
   <link rel="preconnect" href="https://cdn.tailwindcss.com"/>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -18,7 +18,7 @@
   <!-- NAV -->
   <header class="sticky top-0 z-50 bg-neutral-950/80 glass border-b border-white/5">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-      <a href="#" class="font-black tracking-tight text-xl">Peershots<span class="text-indigo-400"> Creative</span></a>
+      <a href="#" class="font-black tracking-tight text-xl">Moda<span class="text-indigo-400"></span></a>
       <nav class="hidden md:flex gap-6 text-sm text-neutral-300">
         <a href="#services" class="hover:text-white">Services</a>
         <a href="#portfolio" class="hover:text-white">Portfolio</a>
@@ -44,7 +44,7 @@
       </div>
       <div class="relative">
         <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
-          <!-- Replace these with your own images -->
+          <!-- Replace with your own images -->
           <img src="https://images.unsplash.com/photo-1520975937093-5f0e3b6b37a4?q=80&w=1200&auto=format&fit=crop" alt="T-shirt mockup" class="w-full h-full object-cover opacity-90"/>
         </div>
         <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
@@ -58,8 +58,8 @@
   <section class="border-y border-white/5 bg-neutral-900/30">
     <div class="max-w-6xl mx-auto px-4 py-8 flex flex-wrap items-center gap-3 text-sm">
       <span class="text-neutral-400">See our Instagram highlights:</span>
-      <a href="https://instagram.com/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Designs</a>
-      <a href="https://instagram.com/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Example Ads</a>
+      <a href="https://www.instagram.com/moda_markting/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Designs</a>
+      <a href="https://www.instagram.com/moda_markting/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Example Ads</a>
     </div>
   </section>
 
@@ -105,7 +105,7 @@
         <h2 class="text-3xl md:text-4xl font-black">Portfolio</h2>
         <p class="mt-2 text-neutral-300">A few projects. More on Instagram highlights.</p>
       </div>
-      <a href="https://instagram.com/" target="_blank" class="px-4 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700 text-sm">Open Instagram</a>
+      <a href="https://www.instagram.com/moda_markting/" target="_blank" class="px-4 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700 text-sm">Open Instagram</a>
     </div>
     <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
       <!-- Replace with your own images/links -->
@@ -211,7 +211,7 @@
         <h2 class="text-3xl md:text-4xl font-black">Start a project</h2>
         <p class="mt-2 text-neutral-300">DM us on Instagram or use the form. Share links to inspo and your deadline.</p>
         <div class="mt-6 space-y-2 text-neutral-300">
-          <div>Instagram: <a href="https://instagram.com/" target="_blank" class="underline">@yourhandle</a></div>
+          <div>Instagram: <a href="https://www.instagram.com/moda_markting/" target="_blank" class="underline">@moda_markting</a></div>
           <div>Email: <a href="mailto:hello@yourdomain.com" class="underline">hello@yourdomain.com</a></div>
           <div>Quick brief form: <a href="#" class="underline">Open Google Form</a></div>
         </div>
@@ -220,30 +220,4 @@
         <form action="mailto:hello@yourdomain.com" method="post" enctype="text/plain" class="space-y-4">
           <div>
             <label class="block text-sm text-neutral-300">Name</label>
-            <input required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" type="text" name="name" placeholder="Your name" />
-          </div>
-          <div>
-            <label class="block text-sm text-neutral-300">Email</label>
-            <input required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" type="email" name="email" placeholder="you@email.com" />
-          </div>
-          <div>
-            <label class="block text-sm text-neutral-300">What do you need?</label>
-            <textarea class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" rows="4" name="message" placeholder="e.g., 2 tee designs + 3 story ads by next Friday"></textarea>
-          </div>
-          <button class="px-4 py-2 rounded-xl bg-white text-neutral-900 font-semibold">Send</button>
-          <p class="text-xs text-neutral-400">Tip: swap this for a Google Form or Tally form for better reliability.</p>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <footer class="border-t border-white/5 py-10 text-center text-sm text-neutral-400">
-    <div class="max-w-6xl mx-auto px-4">
-      <div>© <span id="y"></span> Peershots Creative. All rights reserved.</div>
-      <div class="mt-2">Made with ♥ — hosted free on GitHub Pages.</div>
-    </div>
-  </footer>
-
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
-</body>
-</html>
+            <input required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" type="text" name="name" placeholder
