--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="max-w-6xl mx-auto px-4 py-20 md:py-28 grid md:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="text-4xl md:text-6xl font-black leading-tight">Designs that sell. <span class="text-indigo-400">Ads that convert.</span></h1>
-        <p class="mt-5 text-neutral-300 max-w-xl">We create bold apparel graphics, high‑performing Instagram/TikTok ad creatives, and clean mockups for your shop. Quick turnarounds. Clean files. Real results.</p>
+        <p class="mt-5 text-neutral-300 max-w-xl">We create bold apparel graphics, high-performing Instagram/TikTok ad creatives, and clean mockups for your shop. Quick turnarounds. Clean files. Real results.</p>
         <div class="mt-8 flex flex-wrap gap-3">
           <a href="#pricing" class="px-5 py-3 rounded-xl bg-white text-neutral-900 font-semibold shadow-soft">See Packages</a>
           <a href="#portfolio" class="px-5 py-3 rounded-xl bg-neutral-800 hover:bg-neutral-700 transition font-semibold">View Work</a>
@@ -45,7 +45,7 @@
       <div class="relative">
         <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
           <!-- Replace with your own images -->
-          <img src="https://images.unsplash.com/photo-1520975937093-5f0e3b6b37a4?q=80&w=1200&auto=format&fit=crop" alt="T-shirt mockup" class="w-full h-full object-cover opacity-90"/>
+          <img src="hs.png" alt="Moda hoodie design" class="w-full h-full object-cover opacity-90"/>
         </div>
         <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
           <div class="bg-indigo-500 text-white text-xs md:text-sm font-bold px-4 py-3 rounded-2xl shadow-soft">24–48h draft turnaround</div>
@@ -70,7 +70,7 @@
     <div class="mt-10 grid md:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <h3 class="font-bold text-xl">Custom Apparel Graphics</h3>
-        <p class="mt-2 text-neutral-300">Original designs for tees, hoodies, hats. Print‑ready AI/PSD + PNG exports.</p>
+        <p class="mt-2 text-neutral-300">Original designs for tees, hoodies, hats. Print-ready AI/PSD + PNG exports.</p>
         <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
           <li>Concept to final artwork</li>
           <li>2–3 concepts + 2 revisions</li>
@@ -108,21 +108,41 @@
       <a href="https://www.instagram.com/moda_markting/" target="_blank" class="px-4 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700 text-sm">Open Instagram</a>
     </div>
     <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Replace with your own images/links -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="#" target="_blank">
-        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="https://images.unsplash.com/photo-1516826957135-700dedea698c?q=80&w=1200&auto=format&fit=crop" alt="Streetwear graphic"/>
+      <!-- Card 1 -->
+      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="allweneedismoney.png" alt="All We Need Is Money Hoodie"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-        <div class="absolute bottom-3 left-3 text-sm">Streetwear Graphic</div>
+        <div class="absolute bottom-3 left-3 text-sm">All We Need Is Money Hoodie</div>
       </a>
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="#" target="_blank">
-        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="https://images.unsplash.com/photo-1520975916090-3105956dac38?q=80&w=1200&auto=format&fit=crop" alt="Hoodie mockup"/>
+      <!-- Card 2 -->
+      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="stussy.png" alt="Stüssy Dogs Graphic"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-        <div class="absolute bottom-3 left-3 text-sm">Hoodie Mockups</div>
+        <div class="absolute bottom-3 left-3 text-sm">Stüssy Dogs Graphic</div>
       </a>
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="#" target="_blank">
-        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="https://images.unsplash.com/photo-1545287072-9f0296b921dd?q=80&w=1200&auto=format&fit=crop" alt="Story ad creative"/>
+      <!-- Card 3 -->
+      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="statueofliberty.png" alt="Statue of Liberty Set"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-        <div class="absolute bottom-3 left-3 text-sm">Story Ad Creative</div>
+        <div class="absolute bottom-3 left-3 text-sm">Statue of Liberty Set</div>
+      </a>
+      <!-- Card 4 -->
+      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="ghostfit.png" alt="Ghostfit Outfit"/>
+        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+        <div class="absolute bottom-3 left-3 text-sm">Ghostfit Outfit</div>
+      </a>
+      <!-- Card 5 -->
+      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="tuffzipup.png" alt="Tuff Zip-Up"/>
+        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+        <div class="absolute bottom-3 left-3 text-sm">Tuff Zip-Up</div>
+      </a>
+      <!-- Card 6 -->
+      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+        <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="yellowhoodie.png" alt="Yellow Hoodie"/>
+        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+        <div class="absolute bottom-3 left-3 text-sm">Yellow Hoodie</div>
       </a>
     </div>
   </section>
@@ -145,7 +165,7 @@
         <li class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
           <div class="text-sm text-neutral-400">Step 3</div>
           <div class="font-bold mt-1">Finals</div>
-          <p class="text-neutral-300 mt-2">You get print‑ready, ad‑ready files + mockups.</p>
+          <p class="text-neutral-300 mt-2">You get print-ready, ad-ready files + mockups.</p>
         </li>
       </ol>
     </div>
@@ -195,7 +215,7 @@
     <div class="mt-6 grid md:grid-cols-2 gap-6">
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <div class="font-semibold">What files do I get?</div>
-        <p class="text-neutral-300 mt-2">AI/PSD source files + PNG/JPG/SVG exports. We also include mockups and ad‑ready sizes.</p>
+        <p class="text-neutral-300 mt-2">AI/PSD source files + PNG/JPG/SVG exports. We also include mockups and ad-ready sizes.</p>
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
         <div class="font-semibold">Do you offer motion?</div>
@@ -205,19 +225,4 @@
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="max-w-6xl mx-auto px-4 py-16">
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <div>
-        <h2 class="text-3xl md:text-4xl font-black">Start a project</h2>
-        <p class="mt-2 text-neutral-300">DM us on Instagram or use the form. Share links to inspo and your deadline.</p>
-        <div class="mt-6 space-y-2 text-neutral-300">
-          <div>Instagram: <a href="https://www.instagram.com/moda_markting/" target="_blank" class="underline">@moda_markting</a></div>
-          <div>Email: <a href="mailto:hello@yourdomain.com" class="underline">hello@yourdomain.com</a></div>
-          <div>Quick brief form: <a href="#" class="underline">Open Google Form</a></div>
-        </div>
-      </div>
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <form action="mailto:hello@yourdomain.com" method="post" enctype="text/plain" class="space-y-4">
-          <div>
-            <label class="block text-sm text-neutral-300">Name</label>
-            <input required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" type="text" name="name" placeholder
+  <section id="contact" class="
