--- a/index.html
+++ b/index.html
@@ -99,51 +99,58 @@
   </section>
 
   <!-- PORTFOLIO -->
+    <!-- PORTFOLIO -->
   <section id="portfolio" class="max-w-6xl mx-auto px-4 pb-6">
     <div class="flex items-end justify-between gap-4">
       <div>
         <h2 class="text-3xl md:text-4xl font-black">Portfolio</h2>
         <p class="mt-2 text-neutral-300">A few projects. More on Instagram highlights.</p>
       </div>
-      <a href="https://www.instagram.com/moda_markting/" target="_blank" class="px-4 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700 text-sm">Open Instagram</a>
+      <button class="px-4 py-2 rounded-xl bg-neutral-800 text-sm opacity-60 cursor-not-allowed" title="Links disabled">Open Instagram</button>
     </div>
+
     <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
       <!-- Card 1 -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+      <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="allweneedismoney.png" alt="All We Need Is Money Hoodie"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
         <div class="absolute bottom-3 left-3 text-sm">All We Need Is Money Hoodie</div>
-      </a>
+      </div>
+
       <!-- Card 2 -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+      <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="stussy.png" alt="Stüssy Dogs Graphic"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
         <div class="absolute bottom-3 left-3 text-sm">Stüssy Dogs Graphic</div>
-      </a>
+      </div>
+
       <!-- Card 3 -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+      <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="statueofliberty.png" alt="Statue of Liberty Set"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
         <div class="absolute bottom-3 left-3 text-sm">Statue of Liberty Set</div>
-      </a>
+      </div>
+
       <!-- Card 4 -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+      <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="ghostfit.png" alt="Ghostfit Outfit"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
         <div class="absolute bottom-3 left-3 text-sm">Ghostfit Outfit</div>
-      </a>
+      </div>
+
       <!-- Card 5 -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+      <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="tuffzipup.png" alt="Tuff Zip-Up"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
         <div class="absolute bottom-3 left-3 text-sm">Tuff Zip-Up</div>
-      </a>
+      </div>
+
       <!-- Card 6 -->
-      <a class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40" href="https://www.instagram.com/moda_markting/" target="_blank">
+      <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
         <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="yellowhoodie.png" alt="Yellow Hoodie"/>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
         <div class="absolute bottom-3 left-3 text-sm">Yellow Hoodie</div>
-      </a>
+      </div>
     </div>
   </section>
 
