--- a/index.html
+++ b/index.html
@@ -154,6 +154,73 @@
     </div>
   </section>
 
+  <!-- DESIGNS -->
+<section id="designs" class="max-w-6xl mx-auto px-4 pb-6">
+  <div class="flex items-end justify-between gap-4">
+    <div>
+      <h2 class="text-3xl md:text-4xl font-black">Designs</h2>
+      <p class="mt-2 text-neutral-300">Clothing advertisements & graphic artwork.</p>
+    </div>
+  </div>
+  <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <!-- Card 1 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="1800raceme copy.jpg" alt="Drift Racers Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Drift Racers Design</div>
+    </div>
+    <!-- Card 2 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="bmw.jpg" alt="BMW Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">BMW Design</div>
+    </div>
+    <!-- Card 3 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="bradd pitt copy.jpg" alt="Brad Pitt Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Brad Pitt Design</div>
+    </div>
+    <!-- Card 4 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="bradd pitt copy1.jpg" alt="Brad Pitt Design Alt"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Brad Pitt Alt Design</div>
+    </div>
+    <!-- Card 5 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="cross.jpg" alt="Cross Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Cross Design</div>
+    </div>
+    <!-- Card 6 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="divine.jpg" alt="Divine Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Divine Design</div>
+    </div>
+    <!-- Card 7 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="dog.jpg" alt="Dog Graphic"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Dog Graphic</div>
+    </div>
+    <!-- Card 8 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="kd.jpg" alt="Basketball Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Basketball Design</div>
+    </div>
+    <!-- Card 9 -->
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="snowppl.jpg" alt="Snow People Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Snow People Design</div>
+    </div>
+  </div>
+</section>
+
+
   <!-- PROCESS -->
   <section class="max-w-6xl mx-auto px-4 py-16">
     <div class="grid md:grid-cols-4 gap-6">
