--- a/index.html
+++ b/index.html
@@ -157,6 +157,72 @@
       </div>
     </div>
   </section>
+  <!-- DESIGNS -->
+<section id="designs" class="max-w-6xl mx-auto px-4 pb-6">
+  <div class="flex items-end justify-between gap-4">
+    <div>
+      <h2 class="text-3xl md:text-4xl font-black">Designs</h2>
+      <p class="mt-2 text-neutral-300">Clothing advertisements & graphic artwork.</p>
+    </div>
+  </div>
+
+  <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="1800raceme-copy.jpg" alt="Drift Racers"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Drift Racers</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="bmw.jpg" alt="BMW Design"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">BMW Design</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="bradpitt-1.jpg" alt="Brad Pitt (magenta)"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Brad Pitt (magenta)</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="bradpitt-2.jpg" alt="Brad Pitt (gold)"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Brad Pitt (gold)</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="cross.jpg" alt="Cross"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Cross</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="divine.jpg" alt="Divine"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Divine</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="dog.jpg" alt="Doberman Graphic"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Doberman Graphic</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="kd.jpg" alt="Basketball Poster"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Basketball Poster</div>
+    </div>
+
+    <div class="group relative rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover group-hover:scale-105 transition" src="snow-people.jpg" alt="Snow People"/>
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+      <div class="absolute bottom-3 left-3 text-sm">Snow People</div>
+    </div>
+  </div>
+</section>
+
 
   <!-- DESIGNS -->
 <section id="designs" class="max-w-6xl mx-auto px-4 pb-6">
