--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     </div>
   </section>
 
-  <!-- SOCIAL PROOF / IG BUTTONS -->
+    <!-- SOCIAL PROOF / IG BUTTONS -->
   <section class="border-y border-white/5 bg-neutral-900/30">
     <div class="max-w-6xl mx-auto px-4 py-8 flex flex-wrap items-center gap-3 text-sm">
       <span class="text-neutral-400">See our Instagram highlights:</span>
-      <a href="https://www.instagram.com/stories/highlights/17993201633683585/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Clothing Ads</a>
-      <a href="https://www.instagram.com/stories/highlights/18081994600916704/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Example Ads</a>
+      <a href="https://www.instagram.com/stories/highlights/17993201633683585/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Designs</a>
+      <a href="https://www.instagram.com/stories/highlights/18081994600916704/" target="_blank" class="px-3 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">Clothing Ads</a>
     </div>
   </section>
 
