--- a/index.html
+++ b/index.html
@@ -152,5 +152,51 @@
     </div>
   </section>
 
+  <!-- PROCESS -->
+<section class="max-w-6xl mx-auto px-4 py-16" id="process">
+  <div class="grid md:grid-cols-4 gap-6">
+    <div class="md:col-span-1"><h3 class="text-2xl font-black">Simple Process</h3></div>
+    <ol class="md:col-span-3 grid md:grid-cols-3 gap-6">
+      <li class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
+        <div class="text-sm text-neutral-400">Step 1</div>
+        <div class="font-bold mt-1">Brief</div>
+        <p class="text-neutral-300 mt-2">Tell us your idea, vibe, and targets. Share inspo/images.</p>
+      </li>
+      <li class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
+        <div class="text-sm text-neutral-400">Step 2</div>
+        <div class="font-bold mt-1">Drafts</div>
+        <p class="text-neutral-300 mt-2">We deliver concepts in 24–48h. Pick + refine.</p>
+      </li>
+      <li class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
+        <div class="text-sm text-neutral-400">Step 3</div>
+        <div class="font-bold mt-1">Finals</div>
+        <p class="text-neutral-300 mt-2">You get print-ready, ad-ready files + mockups.</p>
+      </li>
+    </ol>
+  </div>
+</section>
+
+<!-- PRICING -->
+<section id="pricing" class="max-w-6xl mx-auto px-4 py-20">
+  <h2 class="text-3xl md:text-4xl font-black">Simple Pricing</h2>
+  <p class="mt-2 text-neutral-300 max-w-2xl">Edit these numbers as you like. You can also offer a custom quote.</p>
+  <div class="mt-10 grid md:grid-cols-3 gap-6">
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
+      <div class="text-sm text-neutral-400">Starter</div>
+      <div class="text-3xl font-black mt-1">$49</div>
+      <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
+        <li>1 apparel design</li><li>1 mockup (tee/hoodie)</li><li>1 revision</li>
+      </ul>
+      <a href="#contact" class="mt-6 inline-block px-4 py-2 rounded-xl bg-white text-neutral-900 font-semibold">Book</a>
+    </div>
+    <div class="p-6 rounded-2xl border border-indigo-500/40 bg-neutral-900/60 ring-2 ring-indigo-500/40">
+      <div class="text-sm text-indigo-300">Growth (Popular)</div>
+      <div class="text-3xl font-black mt-1">$149</div>
+      <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
+        <li>3 designs or 5 ad creatives</li><li>Mockups + export pack</li><li>2 revisions</li>
+      </ul>
+      <a href="#contact" cla
+
+
 </body>
 </html>
