--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </section>
 
-    <!-- SOCIAL PROOF / IG BUTTONS -->
+      <!-- SOCIAL PROOF / IG BUTTONS -->
   <section class="border-y border-white/5 bg-neutral-900/30">
     <div class="max-w-6xl mx-auto px-4 py-8 flex flex-wrap items-center gap-3 text-sm">
       <span class="text-neutral-400">See our Instagram highlights:</span>
@@ -151,6 +151,61 @@
       </div>
     </div>
   </section>
+
+<!-- VALUE / WHAT YOU GET -->
+<section id="value" class="max-w-6xl mx-auto px-4 py-16">
+  <h2 class="text-3xl md:text-4xl font-black">What you get</h2>
+  <p class="mt-2 text-neutral-300 max-w-3xl">Everything delivered clean and ready to use across print and social. Transparent pricing and fast turnarounds.</p>
+  <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="text-2xl">🧩</div><div class="font-semibold mt-2">Original artwork</div><p class="text-neutral-300 mt-1">Custom illustrations/graphics made for your brand and vibe.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="text-2xl">📦</div><div class="font-semibold mt-2">Export pack</div><p class="text-neutral-300 mt-1">PNG/JPG/SVG + print-ready AI/PSD. Multiple sizes/aspect ratios.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="text-2xl">🧪</div><div class="font-semibold mt-2">Ad‑ready files</div><p class="text-neutral-300 mt-1">Story/Feed/Reel ratios with hooks and copy lines to test.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="text-2xl">🧥</div><div class="font-semibold mt-2">Mockups included</div><p class="text-neutral-300 mt-1">Hoodie/tee/cap mockups to preview the drop and list fast.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="text-2xl">⏱️</div><div class="font-semibold mt-2">24–48h drafts</div><p class="text-neutral-300 mt-1">Most concepts sent within two days. Rush available.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="text-2xl">🔁</div><div class="font-semibold mt-2">Revisions</div><p class="text-neutral-300 mt-1">Tweak until it’s right (package includes revisions as listed).</p></div>
+  </div>
+</section>
+
+<!-- GUARANTEES -->
+<section id="guarantees" class="max-w-6xl mx-auto px-4 pb-8">
+  <div class="grid md:grid-cols-3 gap-6">
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="font-semibold">Usage rights</div><p class="text-neutral-300 mt-2">Full commercial use for your shop/brand once paid. We may showcase work in our portfolio.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="font-semibold">Transparent edits</div><p class="text-neutral-300 mt-2">Clear, time‑boxed rounds so you always know what’s included.</p></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><div class="font-semibold">Files for your printer</div><p class="text-neutral-300 mt-2">We deliver print‑specs on request (colors, bleed, sizing, PMS/CMYK).</p></div>
+  </div>
+</section>
+
+<!-- TESTIMONIALS -->
+<section id="testimonials" class="max-w-6xl mx-auto px-4 py-16">
+  <h2 class="text-3xl md:text-4xl font-black">What clients say</h2>
+  <div class="mt-8 grid md:grid-cols-3 gap-6">
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><p class="text-neutral-200">“Turned our idea into a clean hoodie graphic in two days. Mockups looked exactly like the final.”</p><div class="mt-3 text-sm text-neutral-400">— Streetwear seller (Etsy)</div></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><p class="text-neutral-200">“The reel ads outperformed our old creatives 2x. Loved the export pack with all the sizes.”</p><div class="mt-3 text-sm text-neutral-400">— Boutique brand</div></div>
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40"><p class="text-neutral-200">“Super responsive, clear packages, and we got exactly the files our printer asked for.”</p><div class="mt-3 text-sm text-neutral-400">— Local shop</div></div>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="max-w-6xl mx-auto px-4 pb-6">
+  <div class="grid md:grid-cols-2 gap-8 items-center">
+    <div>
+      <h2 class="text-3xl md:text-4xl font-black">About Moda</h2>
+      <p class="mt-3 text-neutral-300">We’re a small creative team focused on bold apparel graphics and scroll‑stopping ad creatives. Fast, collaborative, and obsessed with clean delivery: organized source files, export packs, and realistic mockups that help you launch faster.</p>
+      <div class="mt-5 flex gap-3 text-sm">
+        <a href="#portfolio" class="px-4 py-2 rounded-xl bg-neutral-800 hover:bg-neutral-700">See work</a>
+        <a href="#contact" class="px-4 py-2 rounded-xl bg-indigo-500 hover:bg-indigo-600 font-semibold">Start a project</a>
+      </div>
+    </div>
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img src="hs.png" alt="Moda sample design" class="w-full h-full object-cover"/>
+    </div>
+  </div>
+</section>
+
+<!-- Sticky CTA -->
+<div class="fixed bottom-4 right-4 z-50">
+  <a href="#contact" class="px-4 py-3 rounded-xl shadow-soft bg-indigo-500 hover:bg-indigo-600 font-semibold">Get a Quote</a>
+</div>
 
 </body>
 </html>
