--- a/index.html
+++ b/index.html
@@ -142,53 +142,63 @@
     </div>
   </section>
 
-  <!-- DESIGNS -->
-  <section id="designs" class="max-w-6xl mx-auto px-4 pb-6">
-    <div class="flex items-end justify-between gap-4">
-      <div>
-        <h2 class="text-3xl md:text-4xl font-black">Ad/Graphic Designs</h2>
-        <p class="mt-2 text-neutral-300">Artwork and ad-style visuals we’ve created.</p>
-      </div>
+ <!-- DESIGNS -->
+<section id="designs" class="max-w-6xl mx-auto px-4 pb-6">
+  <div class="flex items-end justify-between gap-4">
+    <div>
+      <h2 class="text-3xl md:text-4xl font-black">Ad/Graphic Designs</h2>
+      <p class="mt-2 text-neutral-300">Artwork and ad-style visuals we’ve created.</p>
     </div>
-    <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="1800raceme copy.jpg" alt="Drift Racers Design"/>
-        <div class="p-3 text-sm">Drift Racers Design</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="bmw.jpg" alt="BMW Cross Design"/>
-        <div class="p-3 text-sm">BMW Cross Design</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="bradd pitt copy.jpg" alt="Brad Pitt Neon"/>
-        <div class="p-3 text-sm">Brad Pitt Neon</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="bradd pitt copy1.jpg" alt="Brad Pitt Gold"/>
-        <div class="p-3 text-sm">Brad Pitt Gold</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="cross.jpg" alt="Cross Graphic"/>
-        <div class="p-3 text-sm">Cross Graphic</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="divine.jpg" alt="Divine Graphic"/>
-        <div class="p-3 text-sm">Divine Graphic</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="dog.jpg" alt="Dog Graphic"/>
-        <div class="p-3 text-sm">Dog Graphic</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="kd.jpg" alt="Basketball Graphic"/>
-        <div class="p-3 text-sm">Basketball Graphic</div>
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
-        <img class="w-full h-64 object-cover" src="snowppl.jpg" alt="Snow People Graphic"/>
-        <div class="p-3 text-sm">Snow People Graphic</div>
-      </div>
+  </div>
+
+  <div class="mt-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./1800raceme-copy.jpg" alt="Drift Racers Design" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Drift Racers Design</div>
     </div>
-  </section>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./bmw.jpg" alt="BMW Cross Design" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">BMW Cross Design</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./bradpitt-1.jpg" alt="Brad Pitt Neon" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Brad Pitt Neon</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./bradpitt-2.jpg" alt="Brad Pitt Gold" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Brad Pitt Gold</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./cross.jpg" alt="Cross Graphic" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Cross Graphic</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./divine.jpg" alt="Divine Graphic" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Divine Graphic</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./dog.jpg" alt="Dog Graphic" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Dog Graphic</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./kd.jpg" alt="Basketball Graphic" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Basketball Graphic</div>
+    </div>
+
+    <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+      <img class="w-full h-64 object-cover" src="./snow-people.jpg" alt="Snow People Graphic" loading="lazy" decoding="async">
+      <div class="p-3 text-sm">Snow People Graphic</div>
+    </div>
+  </div>
+</section>
+
 
   <!-- PROCESS -->
   <section id="process" class="max-w-6xl mx-auto px-4 py-16">
