--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
         <p class="mt-2 text-neutral-300">DM us on Instagram or email. Share links to inspo and your deadline.</p>
         <div class="mt-6 space-y-2 text-neutral-300">
           <div>Instagram: <a href="https://www.instagram.com/moda_markting/" target="_blank" class="underline">@moda_markting</a></div>
-          <div>Email: <a href="mailto:hello@yourdomain.com" class="underline">hello@yourdomain.com</a></div>
-          <div>Quick brief form: <a href="#" class="underline">Open Google Form</a></div>
+          <div>Email: <a href="mailto:hello@yourdomain.com" class="underline">modamarkets313@gmail.com</a></div>
         </div>
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
