--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="relative">
         <div class="aspect-[4/5] rounded-3xl bg-neutral-900 border border-white/10 shadow-soft overflow-hidden">
-          <img src="hs.png" alt="Moda hoodie design" class="w-full h-full object-cover opacity-90"/>
+          <img src="moda.png" alt="Moda brand logo" class="w-full h-full object-cover opacity-90"/>
         </div>
         <div class="absolute -bottom-6 -left-6 w-40 md:w-48 rotate-[-6deg]">
           <div class="bg-indigo-500 text-white text-xs md:text-sm font-bold px-4 py-3 rounded-2xl shadow-soft">24–48h draft turnaround</div>
